--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,17 +8,19 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets LinguistTools PrintSupport REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets LinguistTools PrintSupport REQUIRED)
 
 set(TS_FILES smart_calc_en_150.ts)
 
 set(PROJECT_SOURCES
+        qcustomplot.cpp
+        qcustomplot.h
         main.cpp
         mainwindow.cpp
         mainwindow.h
@@ -59,6 +61,7 @@ else()
 endif()
 
 target_link_libraries(smart_calc PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(smart_calc PRIVATE Qt${QT_VERSION_MAJOR}::PrintSupport)
 
 set_target_properties(smart_calc PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
